fixingalign3_2/22

--- a/main.css
+++ b/main.css
@@ -9,4 +9,5 @@ h2 {
 
 p {
     background:#FF75A0;
+    text-align: center;
 }
